# aws-polly-tts-tool

./: .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
aws_polly_tts_tool/: __init__.py  billing.py  cli.py  engines.py  utils.py  voices.py
aws_polly_tts_tool/commands/: __init__.py  billing_commands.py  engine_commands.py  info_commands.py  synthesize_commands.py  voice_commands.py
aws_polly_tts_tool/core/: __init__.py  client.py  cost_explorer.py  synthesize.py
tests/: test_utils.py
