[project]
name = "aws-polly-tts-tool"
version = "0.1.0"
description = "A CLI that provides TTS using Amazon Polly"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "boto3>=1.34.0",
    "pydub>=0.25.1",
]
authors = [
    {name = "Dennis Vriend", email = "dvriend@ilionx.com"}
]
license = {text = "MIT"}
readme = "README.md"

[project.scripts]
aws-polly-tts-tool = "aws_polly_tts_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "boto3-stubs[polly,ce]>=1.34.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
strict = true

[[tool.mypy.overrides]]
module = ["pydub", "pydub.playback"]
ignore_missing_imports = true
